Create/update users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,9 @@
             <ul class="sub-menu">
               <li><a href="<%= event_types_path %>">Tipos de eventos</a>
               </li>
+              <li>
+                <a href="<%= users_path %>">Usuarios</a>
+              </li>
             </ul>
           </li>
         </ul>
