Work Centers crud

--- a/app/views/work_centers/new.html.erb
+++ b/app/views/work_centers/new.html.erb
@@ -3,17 +3,17 @@
   <%= javascript_include_tag 'jquery-validate/jquery.validate' %>
   <%= javascript_include_tag 'jquery-validate/localization/messages_es' %>
   <%= javascript_include_tag 'switch/switch' %>
-  <%= javascript_include_tag 'app/users/new' %>
+  <%= javascript_include_tag 'app/work_centers/new' %>
 <% end %>
 <%= content_for :page_title do  %>
-  <%= render partial: 'shared/page_title', locals: { title: 'Agregar un usuario' } %>
+  <%= render partial: 'shared/page_title', locals: { title: 'Agregar un centro de trabajo' } %>
 <% end %>
 <div class="row">
   <div class="col-md-2 col-sm-1 col-xs-1"></div>
   <div class="col-md-8 col-sm-10 col-xs-10">
     <div class="card">
       <div class="card-body">
-        <%= render partial: 'users/form', locals: { user: @user } %>
+        <%= render partial: 'work_centers/form', locals: { work_center: @work_center } %>
       </div>
     </div>
   </div>
