--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,8 @@
           </li>
           <li class="parent"><a href="#"><i class="icon s7-settings"></i><span>Administración</span></a>
             <ul class="sub-menu">
-              <li><a href="<%= work_centers_path %>">Centros de Trabajo</a>
-              </li>
+              <li><a href="<%= work_centers_path %>">Centros de Trabajo</a></li>
+              <li><a href="<%= managers_path %>">Administradores C.T</a></li>
               <li><a href="<%= event_types_path %>">Tipos de eventos</a>
               </li>
               <li>
