--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,7 @@
             <ul class="sub-menu">
               <li><a href="<%= work_centers_path %>">Centros de Trabajo</a></li>
               <li><a href="<%= managers_path %>">Administradores C.T</a></li>
+              <li><a href="<%= doctors_path %>">Médicos</a></li>
               <li><a href="<%= event_types_path %>">Tipos de eventos</a>
               </li>
               <li>
