--- a/app/views/event_types/index.html.erb
+++ b/app/views/event_types/index.html.erb
@@ -29,6 +29,8 @@
               <th>Nombre</th>
               <th>Descripción</th>
               <th>Color</th>
+              <th>Duración</th>
+              <th>Status</th>
               <th></th>
             </tr>
             </thead>
