--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
               <li><a href="<%= managers_path %>">Responsables C.T</a></li>
               <li><a href="<%= doctors_path %>">Médicos</a></li>
               <li><a href="<%= receptionists_path %>">Recepcionistas</a></li>
-              <li><a href="<%= event_types_path %>">Tipos de eventos</a>
+              <li><a href="<%= event_types_path %>">Tipos de evento</a>
               </li>
               <li>
                 <a href="<%= users_path %>">Usuarios</a>
