--- a/app/views/event_types/new.html.erb
+++ b/app/views/event_types/new.html.erb
@@ -1,8 +1,10 @@
 <%= content_for :head do %>
+  <%= stylesheet_link_tag 'switch/switch' %>
   <%= stylesheet_link_tag 'pickr/classic.min' %>
   <%= javascript_include_tag 'pickr/pickr.es5.min' %>
   <%= javascript_include_tag 'jquery-validate/jquery.validate' %>
   <%= javascript_include_tag 'jquery-validate/localization/messages_es' %>
+  <%= javascript_include_tag 'switch/switch' %>
   <%= javascript_include_tag 'app/event_types/new' %>
 <% end %>
 <div class="row">
