--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -3,3 +3,9 @@
         visibility: hidden !important;
     }
 }
+.pull-right {
+    float: right !important;
+}
+.pull-left {
+    float: left !important;
+}
