--- a/app/views/event_types/_form.html.erb
+++ b/app/views/event_types/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(event_type, html: { id: 'event_type_form' }) do |f| %>
   <div class="form-group">
     <label>Nombre *</label>
-    <%= f.text_field 'name', class: 'form-control', placeholder: '', required: true %>
+    <%= f.text_field 'name', class: 'form-control', placeholder: '', required: true, autofocus: true %>
   </div>
   <div class="form-group">
     <label>Descripción</label>
