--- a/app/views/event_types/new.html.erb
+++ b/app/views/event_types/new.html.erb
@@ -7,6 +7,9 @@
   <%= javascript_include_tag 'switch/switch' %>
   <%= javascript_include_tag 'app/event_types/new' %>
 <% end %>
+<%= content_for :page_title do  %>
+  <%= render partial: 'shared/page_title', locals: { title: 'Crear un nuevo tipo de evento' } %>
+<% end %>
 <div class="row">
   <div class="col-md-2 col-sm-1 col-xs-1"></div>
   <div class="col-md-8 col-sm-10 col-xs-10">
