Filter users by role on create doctors, managers and receptionists

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,15 @@
       <div class="content">
         <div class="am-logo"></div>
         <ul class="sidebar-elements">
+          <% if current_user.has_role? Role.receptionist_role %>
+            <li>
+            <% if current_user&.receptionist&.work_center %>
+              <a href="<%= work_center_events_path(current_user&.receptionist&.work_center) %>"><i class="icon s7-date"></i><span>Agenda</span></a>
+            <% else %>
+              <span>Sin agenda</span>
+            <% end %>
+            </li>
+          <% end %>
           <li><a href="<%= user_events_path(current_user) %>"><i class="icon s7-date"></i><span>Mi agenda</span></a>
           </li>
           <li class="parent"><a href="#"><i class="icon s7-settings"></i><span>Administración</span></a>
